# ArthuroGameEngine

./: README.md
Project1/: .gitignore  BaseVertex.glsl  CMakeLists.txt  ColorfulVertexShader.vs  ColorfulVertexShaderOffsetPos.vs  ColorfulVertexShaderUpsideDown.vs  DarkRedVertexColor.vs  EBOMeshRenderer.cpp  EBOMeshRenderer.h  InputVertexColor.fs  Main.cpp  MeshRenderer.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Shader.cpp  Shader.h
Project1/Assets/Shaders/: LitTexturedColorfulVertexShaderOffsetPos.vs  LitTexturedInputVertexColor.fs  TexturedColorfulVertexShaderOffsetPos.vs  TexturedInputVertexColor.fs
Project1/Assets/Shaders/SingleColored3D/: SimpleColored.fs  SimpleColored.vs
Project1/Components/Camera/: Camera.cpp  Camera.h
Project1/Components/GameObject/: GameObject.cpp  GameObject.h
Project1/Components/Light/: BaseLight.cpp  BaseLight.h
Project1/Components/Renderer/: Renderer3D.cpp  Renderer3D.h
Project1/Components/Transform/: TransformComponent.cpp  TransformComponent.h
Project1/Constants/: EngineConstants.cpp
Project1/x64/Debug/: GameEngine.exe.recipe  GameEngine.ilk  Project1.vcxproj.FileListAbsolute.txt  main.obj.enc  vc143.idb
Project1/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/x64/Release/: GameEngine.exe.recipe  GameEngine.iobj  GameEngine.ipdb  Project1.vcxproj.FileListAbsolute.txt
Project1/x64/Release/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+6 more)
(+3 files in other folders)
